src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AnnualTutionFees__c</fullName>
        <label>Annual Tution Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>College_Level__c</fullName>
        <formula>CASE(
&quot;Safe&quot;,IMAGE(&quot;/servlet/servlet.FileDownload?file=01528000005pY29&quot;, &quot;Green&quot;),
&quot;Moderate&quot;,IMAGE(&quot;/servlet/servlet.FileDownload?file=01528000005pY2E&quot;, &quot;Orange&quot;),
&quot;Ambitious&quot;,IMAGE(&quot;/servlet/servlet.FileDownload?file=01528000005pY2d&quot;, &quot;Red&quot;,300,300)
)</formula>
        <label>College Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ETSDepartmentCode__c</fullName>
        <label>ETS GRE Department Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETSInstitutionalCode__c</fullName>
        <label>ETS GRE Institutional Code</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Interested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MyField__c</fullName>
        <formula>&quot;THIS IS JUST A TEST OF NUMBER IF CHARACTERSTHIS IS JUST A TEST OF NUMBER IF CHARACTERSTHIS IS JUST A TEST OF NUMBER IF CHARACTERSTHIS IS JUST A TEST OF NUMBER IF CHARACTERSTHIS IS JUST A TEST OF NUMBER IF CHARACTERSTHIS IS JUST A TEST OF NUMBER IF CHARACTERSTHIS IS JUST A TEST OF NUMBER IF CHARACTERSTHIS IS JUST A TEST OF NUMBER IF CHARACTERSTHIS IS JUST A TEST OF NUMBER IF CHARACTERSTHIS IS JUST A TEST OF NUMBER IF CHARACTERSTHIS IS JUST A TEST OF NUMBER IF CHARACTERSTHIS IS JUST A TEST OF NUMBER IF CHARACTERSTHIS IS JUST A TEST OF NUMBER IF CHARACTERSTHIS IS JUST A TEST OF NUMBER IF CHARACTERSTHIS IS JUST A TEST OF NUMBER IF CHARACTERSTHIS IS JUST A TEST OF NUMBER IF CHARACTERSTHIS IS JUST A TEST OF NUMBER IF CHARACTERSTHIS IS JUST A TEST OF NUMBER IF CHARACTERSTHIS IS JUST A TEST OF NUMBER IF CHARACTERS&quot;</formula>
        <label>MyField</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Contacts__c</fullName>
        <label>No Of Contacts</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <label>Primary Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Province_Tax__c</fullName>
        <label>Province Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <label>Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YocketLink__c</fullName>
        <label>Yocket Link</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Ranking__c</columns>
        <columns>ACCOUNT.RATING</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>Country__c</columns>
        <columns>ETSDepartmentCode__c</columns>
        <columns>ETSInstitutionalCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>College</fullName>
        <active>true</active>
        <description>Test</description>
        <label>College</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Layout</fullName>
        <active>false</active>
        <description>Test1</description>
        <label>Customer Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>